/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package deviceinfra.api.deviceinfo;

option java_package = "com.google.devtools.deviceinfra.api.deviceinfo.proto";
option java_outer_classname = "DeviceDimensionProto";

// Subset of device detailed information in string multimap format for device
// allocation.
message DeviceDimensions {
  // Device dimension items.
  repeated DeviceDimension device_dimension = 1;
}

// A device dimension item.
message DeviceDimension {
  // REQUIRED
  // Key of the dimension.
  string dimension_key = 1;

  // REQUIRED
  // Value of the dimension.
  string dimension_value = 2;

  // REQUIRED
  // If true, the device can be allocated to a task only if the task config has
  // a dimension with the same key and value.
  bool required = 3;
}
